@@ -1,3 +1,11 @@
+Sun Dec 31 19:14:47 2000  George Lebl <jirka@5z.com>
+
+	* panel-widget.[ch], applet.c, extern.c, panel.c:  Allow
+	  the drag_start to be started off at a specific drag offset,
+	  and pass the current drag offset when going over to another
+	  panel.  Also for move from the menu, make the offset the center of
+	  the applet.
+
 Sun Dec 31 18:43:24 2000  George Lebl <jirka@5z.com>
 
 	* panel-widget.c:  Use the new movememnt style for both switch and
